tests/semantic_analysis/error/multipleParamInStruct.c
multipleParamInStruct\.c:3:9: error:.*